LU-6085 mdt: return valid attribute only to client

In mdt_pack_attr2body(), it didn't check the valid bit of lu_attr.
This causes that clients see different file type.

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: Ib79f868205918a52f66c619d80468c4637b99bb5
Reviewed-on: http://review.whamcloud.com/13344
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Lai Siyao <lai.siyao@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>